samples/_failures_safe/1761254872_592a05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a7238d7.c: In function ‘main’:
./samples/SAFE/__tmp_1a7238d7.c:155:20: error: missing terminating " character
  155 |             printf("Decompression successful: %.*
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1a7238d7.c:155:13: error: expected expression at end of input
  155 |             printf("Decompression successful: %.*
      |             ^~~~~~
./samples/SAFE/__tmp_1a7238d7.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a7238d7.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a7238d7.c:155:13: error: expected declaration or statement at end of input
